--- a/src/_includes/partials/css.njk
+++ b/src/_includes/partials/css.njk
@@ -1,6 +1,5 @@
- {% set css %}
-    {% include "src/styles/index.css" %}
-    {% endset %}
-    <style>
-      {{css | postcss | safe}}
-      </style>
+{% set css %}
+{% include "src/styles/index.css" %}
+{% endset %}
+<style>
+  {{css | postcss | safe}}</style>
